--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body {
 
 .name {
   font-size: 1rem;
-  color: var(--light-gray);
+  color: var(--white);
 }
 
 .title {
@@ -82,6 +82,7 @@ body {
 }
 
 .description {
+  font-size: 0.965rem;
   color: hsla(0, 0%, 81%, 70%);
 }
 
@@ -132,6 +133,10 @@ body {
 
 .review-4 .description {
   color: hsla(0, 0%, 100%, 70%);
+}
+
+.review-5 {
+  margin-bottom: 0;
 }
 
 .review-5 .name,
