Added style for desktop view

--- a/style.css
+++ b/style.css
@@ -153,13 +153,25 @@ body {
 }
 
 @media (min-width: 75rem) {
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
+
   .container {
     outline: 1px solid black;
-    max-width: 100%;
-    padding: 4rem 2rem;
+    max-width: 1180px;
+    margin: 0;
+    padding: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+  }
+
+  .review {
+    margin-bottom: 0;
   }
 
   .review-1 {
