--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
 }
 
-/* main {
-  
-} */
+main {
+  background-color: var(--light-grayish-blue);
+}
 
 .container {
   /* outline: 1px solid black; */
@@ -77,8 +77,9 @@ body {
 }
 
 .feedback {
-  font-size: 1.29rem;
+  font-size: 1.2rem;
   margin-bottom: 1rem;
+  font-weight: 600;
 }
 
 .description {
@@ -100,6 +101,10 @@ body {
 
 .review-2 .description {
   color: hsla(0, 0%, 100%, 70%);
+}
+
+.review-3 {
+  background-color: var(--white);
 }
 
 .review-3 .name,
@@ -137,6 +142,7 @@ body {
 
 .review-5 {
   margin-bottom: 0;
+  background-color: var(--white);
 }
 
 .review-5 .name,
@@ -161,13 +167,12 @@ body {
   }
 
   .container {
-    outline: 1px solid black;
     max-width: 1180px;
     margin: 0;
     padding: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    gap: 1.5rem;
   }
 
   .review {
@@ -185,5 +190,9 @@ body {
   .review-5 {
     grid-column: 4;
     grid-row: 1/3;
+  }
+
+  .description {
+    font-size: 1rem;
   }
 }
