--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 
 body {
   font-family: "Barlow Semi Condensed", sans-serif;
+  font-size: 0.8125rem;
 }
 
 main {
@@ -24,7 +25,6 @@ main {
 }
 
 .container {
-  /* outline: 1px solid black; */
   max-width: 88%;
   margin: 0 auto;
   padding: 4rem 0;
@@ -77,14 +77,14 @@ main {
 }
 
 .feedback {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   margin-bottom: 1rem;
   font-weight: 600;
 }
 
 .description {
-  font-size: 0.965rem;
   color: hsla(0, 0%, 81%, 70%);
+  line-height: 1.5;
 }
 
 .review-2 {
@@ -190,9 +190,5 @@ main {
   .review-5 {
     grid-column: 4;
     grid-row: 1/3;
-  }
-
-  .description {
-    font-size: 1rem;
   }
 }
